--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello new barnch</h1>
+    <h1>hello mohamed pull new barnch</h1>
     <script src="app.js"></script>
 </body>
 
